# Ad-Hoc-Scripts

./: README.md
NAS/: export_to_vijunja_db.ipynb
download_links/: download_links.ps1  links.txt
download_youtube_videos/: links.txt  links_only.txt  main.py  pyproject.toml  search_term_to_get_first_video_url.py
general_file_management/: move_video_to_folder_with_same_name.ps1  truncate_file_names.ps1
git_related/: gitignore_updater.ps1  ignore_large_files.ps1  paths_of_provided_extensions.ps1
music/populate_m3u_with_relative_path/: download_album.ipynb  exp.ipynb  main.ipynb  main.py  pyproject.toml  song_index_cache.json
music/populate_m3u_with_relative_path/playlists/: Buffer.m3u  Bus rides.m3u  Code Repeat.m3u  Covers and Instrumentals.m3u  Devotional.m3u  EA Cricket 07 - Soundtrack.m3u  FAHM.m3u  Garba.m3u  Jagjit Singh.m3u  Just Sad Songs.m3u  Lullabies.m3u  Rain.m3u  Title Songs.m3u  Walk.m3u  Wayy to Cheerful.m3u
music/populate_m3u_with_relative_path/resolved_playlists/: 2 Song Repeat.m3u  90's and Pre 90's.m3u  Anime Title Songs.m3u  Buffer.m3u  Bus rides.m3u  Calm Songs.m3u  Car Rides.m3u  Code Repeat.m3u  Covers and Instrumentals.m3u  Devotional.m3u  EA Cricket 07 - Soundtrack.m3u  FAHM.m3u  Garba.m3u  Jagjit Singh.m3u  Just Sad Songs.m3u  Kabir Amritvani.m3u  Lullabies.m3u  Motivational.m3u  No Hablas Lyrics.m3u  Rain.m3u  Ramayan.m3u  Study Repeat.m3u  Title Songs.m3u  Vibe.m3u  Walk.m3u  Wayy to Cheerful.m3u  Western Stuff.m3u
script_files/: FIR episode arrangement copy.ipynb  history of the great war ep arrangement.ipynb  (+1 more)
(+169 files in other folders)
