[project]
name = "populate-m3u-with-relative-path"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "ipykernel>=6.29.5",
    "mutagen>=1.47.0",
    "python-levenshtein>=0.27.1",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.13.0",
    "textdistance>=4.6.3",
    "tqdm>=4.67.1",
]
